@@ -1,36 +1,53 @@
 /// <reference path="../external.ts" />
 
 /**
- * The map controller
+ * The Kai monastery storage controller
  */
-const kaimonasteryController = {
+class kaimonasteryController {
     
-        /**
-         * Render page
-         */
-        index: function() {
-    
-            if( !setupController.checkBook() )
-                return;
-    
-            views.loadView('kaimonastery.html')
-            .then(function() {
+    /**
+     * Render page
+     */
+    public static index() {
 
-                // Go back to the equipment section
-                $('#monastery-goback').click( function(e : Event) {
-                    e.preventDefault();
-                    state.sectionStates.currentSection = Book.EQUIPMENT_SECTION;
-                    routing.redirect( 'game' );
-                });
+        if( !setupController.checkBook() )
+            return;
 
-                // Render available objects on the Kai monastery
-                mechanicsEngine.showAvailableObjects( true );
+        if( state.sectionStates.currentSection != Book.KAIMONASTERY_SECTION ) {
+            // This page should be only available if the current section is KAIMONASTERY_SECTION
+            // This is beacause on that section state will be stored the objects info
+            routing.redirect('game');
+            return;
+        }
+
+        views.loadView('kaimonastery.html')
+        .then( function() {
+            // Go back to the equipment section
+            $('#monastery-goback').click( function(e : Event) {
+                kaimonasteryController.onGoBackToEquipment(e);
             });
-            
-        },
-    
-        /** Return page */
-        getBackController: function() { return 'game'; }
+
+            // Render available objects on the Kai monastery
+            mechanicsEngine.showAvailableObjects( true );
+        });
         
-    };
+    }
+    
+    /** Go back to the Equipment section clicked */
+    private static onGoBackToEquipment(e : Event) {
+        e.preventDefault();
+
+        // Save the Kai monastery inventory to the Action Chart
+        state.actionChart.kaiMonasterySafekeeping = state.sectionStates.getSectionState().objects;
+        state.persistState();
+
+        // Go back to Equipment section
+        state.sectionStates.currentSection = Book.EQUIPMENT_SECTION;
+        routing.redirect( 'game' );
+    }
+
+    /** Return page */
+    public static getBackController() { return 'mainMenu'; }
+
+};
     
