@@ -41,6 +41,9 @@
                 <pick class="money" count="[RANDOM] + 10" />
             </randomTable>
 
+            <!-- Kai monastery safekeeping -->
+            <kaiMonasteryStorage />
+            
             <object objectId="dagger" />
             <object objectId="laumspurpotion4" />
             <object objectId="sword" />
