@@ -40,6 +40,7 @@
                 <pick class="money" count="[RANDOM] + 10" />
             </randomTable>
 
+            <!-- Kai monastery safekeeping -->
             <kaiMonasteryStorage />
             
             <object objectId="sword" />
