@@ -24,3 +24,5 @@
 
 1.8.1 / 1.9
 - Book 1, sect342: Fixed bug with mindblast
+- Kai monastery safekeeping: Now you can drop objects on the Kai monastery and they will be available on the next book
+
